--- a/songoftheweekclient/src/App.css
+++ b/songoftheweekclient/src/App.css
@@ -1,5 +1,19 @@
+html, body {
+  width: 100%;
+  height: 100%;
+}
+
+body {
+  background-color: #282c34;
+}
+
 .App {
   text-align: center;
+  width: 100%;
+  position: relative;
+  float: left;
+  display: flex;
+  flex-direction: column;
 }
 
 .App-logo {
@@ -14,8 +28,8 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  min-height: 350px;
+  height: 50%;
   display: flex;
   flex-direction: column;
   align-items: center;
